🐛 Fix: Fix build for Java 21 preview.