@@ -9,7 +9,12 @@ version = "0.0.1-SNAPSHOT"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
+
+tasks.withType<JavaCompile>().configureEach { options.compilerArgs.add("--enable-preview") }
+tasks.withType<Test>().configureEach { jvmArgs("--enable-preview") }
+tasks.withType<JavaExec>().configureEach { jvmArgs("--enable-preview") }
 
 configurations {
     compileOnly {
